--- a/04-populations.Rmd
+++ b/04-populations.Rmd
@@ -715,9 +715,9 @@ dev.off()
 knitr::include_graphics("ch_populations/images/popvisual.png")
 ```
 
-## Comparisons: Same variance
+## Comparisons: Same $\sigma$
 
-In this section we review one method of comparing population means when the populations have the same variance/standard deviation. To facilitate comparing two populations we use the heights of males and females, measured in centimeters, as an example. On average males are taller than females. There is, however, variability in the heights of both males and females. The variability in heights is the same for males and females even though the means differ. We illustrate these differences in a series of figures below. Each figure contains three scenarios (labeled A, B, C) in which we manipulate the mean height and variability of the populations. In each scenario the standard deviation of heights is the same for the male and female populations.
+In this section we review a method of comparing two population means when the populations have the same standard deviation. To facilitate comparing two populations we use the heights of males and females, measured in centimeters, as an example. On average males are taller than females. There is, however, variability in the heights of both males and females. The variability in heights is the same for males and females even though the means differ. We illustrate these differences in a series of figures below. Each figure contains three scenarios (labeled A, B, C) in which we manipulate the mean height and variability of the populations. In each scenario the standard deviation of heights is the same for the male and female populations.
 
 
 ### Standardized units
@@ -802,7 +802,7 @@ It is important to also look at the original units when interpreting results - n
 knitr::include_graphics("ch_populations/images/dvalue_ex3.png")
 ```
 
-## Comparisons: Different variances
+## Comparisons: Different $\sigma$
 
 The calculation of the standardized mean difference values ($\delta$-values) above assumed that the two populations had identical standard deviations. In some scenarios, you might reasonably expect the standard deviations to be different for two populations. When the **populations** being compared have different standard deviations, we can still calculate a standardized mean difference (i.e, $\delta$-value) but we need to pick one of the standard deviations to use in the formula. In many cases, it makes sense to think of one population as the frame of reference for the comparison; a "Control" population of sorts. In this case, you use the standard deviation of the control population as the reference/denominator when calculating the $\delta$-value as illustrated in Formula \@ref(eq:popsmdcontrolch4) below. Make sure you recognize we are talking about a scenario with different population standard deviations (not sample standard deviations) as the appropriate situation for this type of calculation.
 
@@ -815,7 +815,7 @@ The calculation of the standardized mean difference values ($\delta$-values) abo
 
 Sometimes we measures the members of a single population twice and are interested in the change across occasions. Consider a scenario where everyone in a large population (*N* = 1000000) attempts to loose weight over a given period of time. We weigh everyone in the population at time 1 before the weight loss attempt. Then we weigh everyone in the population at time 2 after the weight loss attempt.
 
-Think of this scenario concretely with respect to how we would record this information. Imagine a large spreadsheet with 1000000 rows - each representing a person. There are two columns. The first column contains time 1 weights. The second column contains time 2 weights. We are interested in how weights changed across the times. So we create a third column, called diff, by subtracting time 1 weight from time 2 weights. That is, diff = time 2 weight - time 1 weight. The new diff column indicates how the weights for each person have changed over the diet. We can think of this single column of differences as being a population. This column is used to calcualted the repeated-measures $\delta$-value. Specifically, the mean of the diff column ($bar{x}_{diff}$) and the standard deviation of the diff column ($s_{diff}$) are used in Formula \@ref(eq:popsmddiffch4) below:
+Think of this scenario concretely with respect to how we would record this information. Imagine a large spreadsheet with 1000000 rows - each representing a person. There are two columns. The first column contains time 1 weights. The second column contains time 2 weights. We are interested in how weights changed across the times. So we create a third column, called diff, by subtracting time 1 weight from time 2 weights. That is, diff = time 2 weight - time 1 weight. The new diff column indicates how the weights for each person have changed over the diet. We can think of this single column of differences as being a population. This column is used to calculate the repeated-measures $\delta$-value. Specifically, the mean of the diff column ($bar{x}_{diff}$) and the standard deviation of the diff column ($s_{diff}$) are used in Formula \@ref(eq:popsmddiffch4) below:
 
 \begin{equation} 
 \delta =  \frac{\mu_{diff}}{\sigma_{diff}}
@@ -823,7 +823,7 @@ Think of this scenario concretely with respect to how we would record this infor
 \end{equation} 
 
 
-### Benchmarks
+## Comparison Benchmarks
 
 Regardless of how the standardized mean difference (i.e., $\delta$-value) is calculated, Cohen suggested that the values of 0.20, 0.50, and 0.80 correspond to the effect size labels of small, medium, and large, respectively [@cohen1988]. These effect sizes are illustrated in Figure \@ref(fig:dex4). As described in an interesting  [blog post](https://replicationindex.com/2015/09/22/the-statistical-power-of-abnormal-social-psychological-research-a-revew-by-jacob-cohen/), these benchmark values came from reviewing a single issue of the *Journal of Abnormal and Social Psychology*. Basing benchmarks on such a small number of studies is potentially problematic - as is the fact that the that time all the studies were prone to publication bias. A recent investigation [see @schafer2019meaningfulness] of effect sizes in pre-registered studies, with no publication bias, suggests substantially lower benchmark values.
 
@@ -835,7 +835,7 @@ knitr::include_graphics("ch_populations/images/dvalue_ex4.png")
 
 You can visualize any $\delta$ value (i.e., population $d$-value) using the rpsychologist [website](https://rpsychologist.com/d3/cohend/). This website also provides a number of interesting statistics such as the percentage of overlapping values in two populations for a given $\delta$/d value. Take a minute to use this website now.
 
-Cohen's benchmarks for standardized mean differences are displayed in the table below. These should be interpreted with caution. The magnitude of an effect is best considered in the context of the field of research and the consequences of an effect on individuals in both the short and long run.
+Cohen's benchmarks for standardized mean differences are displayed in the table below. These effect size labels should be interpreted with caution. The magnitude of an effect is best considered in the context of the field of research and the consequences of an effect on individuals in both the short and long run.
 
 |  Cohen (1988) Label  | Value        |
 |             :-: |  :-:         | 
@@ -928,23 +928,8 @@ dev.off()
 
 ```
 
-\newpage
 
-```{r rhoplot, fig.cap="Populations of various strengths.", echo = FALSE, out.height="80%"}
-knitr::include_graphics("ch_populations/images/rho_example.png")
-```
-
-Cohen's benchmarks for correlations (i.e., $\rho$) are displayed in the table below. These should be interpreted with caution. The magnitude of an effect is best considered in the context of the field of research and the consequences of an effect on individuals in both the short and long run.
-
-|  Cohen (1988) Label  | Value        |
-|             :-: |  :-:         | 
-| Small           | $\rho$ = .10 |
-| Medium          | $\rho$ = .30 |
-| Large           | $\rho$ = .50 |
-
-### Linear relations
-
-A correlation only provides an index of a linear relation - so it is important to plot the data. Weak correlations (close to zero) may indicate there is not a linear relation. But there may still be a relation between the variables - just not one that follows a straight line. Indeed, the same correlation may take many different forms. Consider the data sets from the datasauRus package presented in Figure \@ref(fig:datarex) The graphs for each data set appear quite different. Yet, the following is true for all 12 data sets:
+Because a correlation only provides an index of a linear relation - it is important to plot the data. Weak correlations (close to zero) may indicate there is not a linear relation. But there may still be a relation between the variables - just not one that follows a straight line. Indeed, the same correlation may take many different forms. Consider the data sets from the datasauRus package presented in Figure \@ref(fig:datarex). The graphs for each data set appear quite different. Yet, the following is true for all 12 data sets:
 
 * The mean of X is 54.3 and the standard deviation is 16.8
 * The mean of Y is 47.8 and the standard deviation is 26.9
@@ -972,6 +957,25 @@ ggsave(plot = rexgraph,
 ```{r datarex, fig.cap="Various data sets with the same correlation, same means, and same standard deviations", echo = FALSE, out.height="80%", out.width="80%"}
 knitr::include_graphics("ch_populations/images/datarex.png")
 ```
+
+## Relation benchmarks
+
+Plots of linear relations are presented in Figure \@ref(fig:rhoplot). The three graphs in this figure corresponds to Cohen's benchmarks for correlations (i.e., $\rho$), displayed in the table below. 
+
+
+|  Cohen (1988) Label  | Value        |
+|             :-: |  :-:         | 
+| Small           | $\rho$ = .10 |
+| Medium          | $\rho$ = .30 |
+| Large           | $\rho$ = .50 |
+
+
+These effect size labels should be interpreted with caution. The magnitude of an effect is best considered in the context of the field of research and the consequences of an effect on individuals in both the short and long run.
+
+```{r rhoplot, fig.cap="Populations of various strengths.", echo = FALSE, out.height="60%"}
+knitr::include_graphics("ch_populations/images/rho_example.png")
+```
+
 
 \newpage
 
