--- a/05-samples.Rmd
+++ b/05-samples.Rmd
@@ -576,7 +576,7 @@ We see from the output that $d_{unbiased}$ values were as small as -0.38 and as 
 The population-level correlation, $\rho$, is estimated by the sample-level correlation, $r$. The value for $r$ can be calculated using Formula \@ref(eq:sampler5) below.
 
 \begin{equation} 
-r =  \frac{\Sigma (x - \bar{X})(y - \bar{y})}{\sqrt{\Sigma (x - \bar{x})^2\Sigma (y - \bar{Y})^2}}
+r =  \frac{\Sigma (x - \bar{x})(y - \bar{y})}{\sqrt{\Sigma (x - \bar{x})^2\Sigma (y - \bar{y})^2}}
       (\#eq:sampler5)
 \end{equation} 
 
@@ -590,7 +590,7 @@ library(tidyverse)
 pop_data <- read_csv(file = "data_cor_pop.csv")
 ```
 
-The glimpse() command reveals there are 300000 rows and two columns (weight and height).
+The glimpse() command reveals there are 300000 rows and two columns (weight and height). Each row represents a different person in the population.
 
 ```{r}
 glimpse(pop_data)
@@ -602,9 +602,9 @@ We can obtain the population correlation, $\rho$, by correlating the weight and 
 cor(pop_data)
 ```
 
-We see from this matrix that the correlation between weight and height is $\rho$ = .50 (with rounding).
+We see from this matrix that the population correlation  (*N* = 300000) between weight and height is $\rho$ = .50 (with rounding), see Figure \@ref(fig:rdistplot)A.
 
-To examine the extent to which this population correlation, $\rho$ = .50, is estimated by the sample statistic, $r$, we need to take a larger number of samples. Therefore, we take 50000 sample (each n = 75) and calculate the correlation for each of them:
+To examine the extent to which this population correlation, $\rho$ = .50, is estimated by the sample statistic, $r$, we need to take a large number of samples. Therefore, we take 50000 samples (each *n* = 75) and calculate the correlation for each:
 
 ```{r, eval = FALSE}
 set.seed(1)
@@ -618,23 +618,31 @@ many_samples <- get_r_samples_from_population_data(data = pop_data,
 many_samples <- readRDS("ch_samples/many_samples_r_n75_rho50.RDS")
 ```
 
-We can examine the contents of many_samples using the head() command. Each row of many_samples illustrates a sample correlation in the $r$ column. If you examine the first row carefully you see that the data in this row corresponds to the hand calculation example.
+We can examine the first 10 rows of many_samples using the head() command. There are 50000 rows and each row represent a different sample of 75 people. The correlation between height and weight for each sample is presented in the $r$ column. 
 
 ```{r}
 head(many_samples, 10)
 ```
 
-Recall the population-level standardized mean difference, $\delta$, was 1.49. We can see the extent to which the average of the sample-level $d$ and $d_{unbiased}$ values compare to this population-level value.
+If you examine the first row carefully you see a sample correlation of $r = .38$ based on $n$ = 75. This sample correlation is illustrated in Figure \@ref(fig:rdistplot)B and it is just one of the 50000 sample correlations. The distribution of the 50000 sample correlations is illustrated in in Figure \@ref(fig:rdistplot)C.
+
+Even though the population correlation is $\rho = .50$ there is considerable variability in the sample correlations, $r$. Each sample correlation is based on a subset of the population data (i.e., 75 of the 300000 rows). Consequently, the sample correlations differ from the population correlation due to sampling error. The differences among the sample correlations can be quite large. Indeed, as the code below reveals, some sample correlation were as low as $r = .06$ and as high as $r = .77$ -- even though the population correlation was $\rho = .50$.
+
 
 ```{r}
 many_samples %>%
-  summarise(mean_d = mean(d),
-            mean_d_unbiased = mean(d_unbiased))
+  summarise(min_r = min(r),
+            max_r = max(r))
 ```
 
-You can see that the mean of the sample-level $d$ values is 1.56 which is higher than the population-level standardized mean difference ($\delta$ = 1.49). In contrast, you can see that the mean of the sample-level $d_{unbiased}$ values is 1.49 which corresponds to the population-level standardized mean difference ($\delta$ = 1.49).
+Even though the sample correlations usually differed from the population correlation we are not concerned. We recognize that there is little to be learned from a single study. We are more concerned as to whether the average of a large number of sample correlations is correct. We assess this with the code below.
 
+```{r}
+many_samples %>%
+  summarise(mean_r = mean(r))
+```
 
+You can see that the mean of the sample-level correlations is $\bar{r} = .497$ which is very close to the population-level correlation $\rho = .50$ (.4999951 without rounding). Consequently, for practical purposes, we don't worry about the sample correlation being a biased estimator of the population correlation. On average, sample correlation are correct - even though any single sample correlation is likely incorrect due to sampling error (i.e., the fact it is based on a small subset of the population). 
 
 ```{r, include=FALSE, eval = FALSE}
 library(learnSampling)
@@ -658,12 +666,12 @@ names(pop_data) <- c("weight", "height")
 
 write_csv(pop_data, path = "data_cor_pop.csv")
 
-# set.seed(1)
-# many_samples <- get_r_samples_from_population_data(data = pop_data,
-#                                                    n = n,
-#                                                    number.of.samples = k)
-# 
-# saveRDS(many_samples, file = "ch_samples/many_samples_r_n75_rho50.RDS")
+set.seed(1)
+many_samples <- get_r_samples_from_population_data(data = pop_data,
+                                                   n = n,
+                                                   number.of.samples = k)
+
+saveRDS(many_samples, file = "ch_samples/many_samples_r_n75_rho50.RDS")
 
 many_samples <- readRDS("ch_samples/many_samples_r_n75_rho50.RDS")
 
@@ -720,7 +728,6 @@ dev.off()
 knitr::include_graphics("ch_samples/images/r_sampling_dist_edit.png")
 ```
   
-  
 
 ## Overview
 
@@ -737,6 +744,8 @@ In this chapter we have illustrated how population parameters can be estimated b
 |          |     |  $s_{pooled}  = \sqrt{\frac{(n_1 -1)s_1^2 + (n_2 -1)s_2^2}{n_1 + n_2-2}}$|
 | Cohen's $d$ or SMD|$\delta= \frac{\mu_{1} - \mu_{2}}{\sigma}$ | $d  = \frac{\bar{x}_{1} - \bar{x}_{2}}{s_{pooled}}$    |
 |          |     | $d_{unbiased}  = \frac{\bar{x}_{1} - \bar{x}_{2}}{s_{pooled}}  \times [1 - \frac{3}{4(n_1 + n_2)-9}]$ |
+| Correlation | $\rho =  \frac{\Sigma (X - \mu_X)(Y - \mu_Y)}{\sqrt{\Sigma (X - \mu_X)^2\Sigma (Y - \mu_Y)^2}}$ | $r =  \frac{\Sigma (x - \bar{x})(y - \bar{y})}{\sqrt{\Sigma (x - \bar{x})^2\Sigma (y - \bar{y})^2}}$ |
+
 \singlespacing
 
 ## Meta-analysis
@@ -752,26 +761,17 @@ Now that you understand the logic for assessing bias, we present an old statisti
 
 ## Key Points
 
-* Samples are of interest because they help us estimate attributes of a population.
+1. Samples are of interest because they help us estimate attributes of a population.
 
-* Sample statistics estimate population parameters.
+2. Sample *statistics* estimate population *parameters*.
 
-* Due to the fact that sample statistics are based on a random subset of the population (i.e., a sample) they often differ substantially from the population parameter. This illustrates that informational value of a single study is typically quite low.
+3. Due to the fact that sample statistics are based on a random subset of the population (i.e., a sample) they often differ substantially from the population parameter. This illustrates that informational value of a single study is typically quite low.
 
-* A statistic is unbiased if the average of the sample statistics, over many thousand of samples, equals the population parameter.
+4. A statistic is unbiased if the average of the sample statistics, over many thousand of samples, equals the population parameter.
 
-* To avoid bias, sometimes the formula for a sample statistics differs from the formula for the population parameter.
+5. To avoid bias, sometimes the formula for a sample statistics differs from the formula for the population parameter.
 
-* Meta-analyses are used in the "real world" the way we used simulations in this chapter.
-
-
-## To Do
-
-1 - add correlation sampling graphs etc. emphsize subset of row so population correlation vs sample correlaiton is clear...
-
-2- emphaise SMD is scenario where we assume equal population variances
-
-
+6. Meta-analyses are used in the "real world" the way we used simulations in this chapter.
 
 
 
