--- a/book.bib
+++ b/book.bib
@@ -269,3 +269,10 @@
   year={1988},
   publisher={Taylor \& Francis Group}
 }
+
+@book{schmidt2014methods,
+  title={Methods of meta-analysis: Correcting error and bias in research findings},
+  author={Schmidt, Frank L and Hunter, John E},
+  year={2014},
+  publisher={Sage}
+}
