--- a/05-samples.Rmd
+++ b/05-samples.Rmd
@@ -581,7 +581,7 @@ r =  \frac{\Sigma (x - \bar{x})(y - \bar{y})}{\sqrt{\Sigma (x - \bar{x})^2\Sigma
 \end{equation} 
 
 
-Sample-level correlations, $r$, often differ from the population-level correlation (i.e., $\rho$) due to sampling error. We can confirm that sample correlations are not substantially biased with a simulation. That is, we can confirm that the average of many sample correlations ($r$) roughly equals the population correlation (i.e., $\rho$) using a simulation. We say "roughly equal" because $r$ is a biased estimator of $\rho$ but the bias is typically small enough that it can be ignored (Schmidt & Hunter, 2015),
+Sample-level correlations, $r$, often differ from the population-level correlation ($\rho$) due to sampling error. We can confirm that sample correlations are not substantially biased with a simulation. That is, we can confirm that the average of many sample correlations ($r$) roughly equals the population correlation ($\rho$) using a simulation. We say "roughly equal" because $r$ is technically a biased estimator of $\rho$ but the bias is sufficiently small that it can be ignored [@schmidt2014methods].
 
 We have the height and weight for 300000 people that comprise our population (fictious data). This data can be loaded with the command below.
 
@@ -590,10 +590,10 @@ library(tidyverse)
 pop_data <- read_csv(file = "data_cor_pop.csv")
 ```
 
-The glimpse() command reveals there are 300000 rows and two columns (weight and height). Each row represents a different person in the population.
+The print() command reveals there are 300000 rows and two columns (weight and height). Each row represents a different person in the population.
 
 ```{r}
-glimpse(pop_data)
+print(pop_data)
 ```
 
 We can obtain the population correlation, $\rho$, by correlating the weight and height columns:
@@ -618,10 +618,10 @@ many_samples <- get_r_samples_from_population_data(data = pop_data,
 many_samples <- readRDS("ch_samples/many_samples_r_n75_rho50.RDS")
 ```
 
-We can examine the first 10 rows of many_samples using the head() command. There are 50000 rows and each row represent a different sample of 75 people. The correlation between height and weight for each sample is presented in the $r$ column. 
+We can examine the first few rows of many_samples using the print() command. There are 50000 rows and each row represent a different sample of 75 people. The correlation between height and weight for each sample is presented in the $r$ column. 
 
 ```{r}
-head(many_samples, 10)
+print(many_samples)
 ```
 
 If you examine the first row carefully you see a sample correlation of $r = .38$ based on $n$ = 75. This sample correlation is illustrated in Figure \@ref(fig:rdistplot)B and it is just one of the 50000 sample correlations. The distribution of the 50000 sample correlations is illustrated in in Figure \@ref(fig:rdistplot)C.
@@ -664,14 +664,14 @@ pop_rho <- pop_rho %>% round(1)
 pop_data <- as.data.frame(pop_rho)
 names(pop_data) <- c("weight", "height")
 
-write_csv(pop_data, path = "data_cor_pop.csv")
+#write_csv(pop_data, path = "data_cor_pop.csv")
 
-set.seed(1)
-many_samples <- get_r_samples_from_population_data(data = pop_data,
-                                                   n = n,
-                                                   number.of.samples = k)
-
-saveRDS(many_samples, file = "ch_samples/many_samples_r_n75_rho50.RDS")
+# set.seed(1)
+# many_samples <- get_r_samples_from_population_data(data = pop_data,
+#                                                    n = n,
+#                                                    number.of.samples = k)
+# 
+# saveRDS(many_samples, file = "ch_samples/many_samples_r_n75_rho50.RDS")
 
 many_samples <- readRDS("ch_samples/many_samples_r_n75_rho50.RDS")
 
