--- a/05-samples.Rmd
+++ b/05-samples.Rmd
@@ -531,7 +531,7 @@ saveRDS(many_samples, file = "ch_samples/many_samples_d_n10.RDS")
 many_samples <- readRDS("ch_samples/many_samples_d_n10.RDS")
 ```
 
-We can examine the contents of many_samples using the head() command. Each row of many_samples illustrates two samples: 10 males and 10 females. For both males and females we calculate the mean and variance. As well, we calculate the $d$ and $d_{unbiased}$ for each row. If you examine the first row carefully you see that the data in this row corresponds to the hand calculation example.
+We can examine the contents of many_samples using the print() command. Each row of many_samples represents a single study. Each study has two samples: 10 males and 10 females. For both males and females we calculate the mean and variance. As well, we calculate the $d$ and $d_{unbiased}$ for each row. If you examine the first row carefully you see that the data in this row corresponds to the hand calculation example.
 
 ```{r}
 print(many_samples)
