--- a/index.Rmd
+++ b/index.Rmd
@@ -30,11 +30,7 @@ lapply(c('xfun'), function(pkg) {
 
 # Preface {-}
 
-R's emerging role in psychology will be described here..
-
-## Structure of the book {-}
-
-I'll put more about the structure of the book here in the future.
+These notes are a resource for students in my PSYC*6060 class. The notes are a subset of material that I have created for a public domain statistics book to be released sometime in the distant future.
 
 ## Software information and conventions {-}
 
