--- a/06-samples_precision.Rmd
+++ b/06-samples_precision.Rmd
@@ -107,7 +107,7 @@ The most common way of referring to the width of this distribution of sample mea
       (\#eq:samplesechnext)
 \end{equation} 
 
-Notice that the formula for standard error is actually just the formula for standard deviation but with notation adapted to reflect the fact we are examing sample means (i.e., $\bar{x}$'s) instead of people (i.e., X's).
+Notice that the formula for standard error is actually just the formula for standard deviation but with notation adapted to reflect the fact we are examining sample means (i.e., $\bar{x}$'s) instead of people (i.e., X's).
 
 Often we will not talk about standard error but rather the variance of the distribution of sample means. When we do so, we are talking about the same thing - the variability in sample means - but using different units. You can see that the formula for the variance of sample means, see Formula \@ref(eq:samplevarchnext) below, is just a squared version of the standard error equation, Formula \@ref(eq:samplesechnext) above.
 
@@ -283,7 +283,7 @@ So where are we? We've learned that sample means may overestimate, or underestim
 When we conduct a single study, we get a sample mean. We cannot estimate how precise that sample mean is; we can however, estimate how precise sample means are in general -- via the variance of sample means (or standard error). There is a formula for calculating the variance of sample means, Formula \@ref(eq:samplevar2chnext), but it requires knowledge of the (unknown) population variance. Consequently, we use an estimate of the population variance in these formulas rather than the actual population variance, see Formula \@ref(eq:samplevar2estchnext). As a result, when we calculate variance of sample means (or standard error) using an estimate of the population variance (from our sample) we only obtain an estimates of the variance of sample means. Moreover, this estimate of the variance of sample means is itself influenced by sampling error - but accurate when averaged over many studies.
 
 
-## Factors influencing precision
+## Precision for means: Causes
 
 The formula for variance of the sampling distribution for the mean reveals that it is influenced only by the population variance and sample size. In a research scenario we don't have any control over the population variance (it is what it is), but we do have control over sample size. Increasing the sample size decreases the variability in sample means - as illustrated in the formulas below. 
  
@@ -339,10 +339,18 @@ knitr::include_graphics("ch_samples_precision/images/sampling_mdist.png")
 
 Additionally, a larger sample size makes the sample estimate ($s^2$) of the population variance ($\sigma^2$) more precise. Consequently, it makes the sample estimate ($s_{\bar{x}}^2$ or $s_{\bar{x}}$) of the variance of sample means ($\sigma_{\bar{x}}^2$ or $\sigma_{\bar{x}}$) more precise. Therefore, increasing the sample size increases the precision of a) sample means ($\bar{x}$) and b) precision estimates ($s_{\bar{x}}^2$ or $s_{\bar{x}}$).
 
+**The precision of sample means is influenced by:**
+
+* population variance/standard deviation ($\sigma^2$ / $\sigma^2$)
+
+* sample size (%n%)
+
 
 \newpage
 
-## Precision for other statistics
+## Precision for $d$-values: Causes
+
+### Sample size
 
 Whenever we use a statistic (e.g., $\bar{x}$) to estimate a population-level parameter (e.g., $\mu$) the statistic will differ from the parameter due to sampling error. This is true of all statistics. Therefore, it is possible to generate a sampling distribution for all statistics. 
 
@@ -432,3 +440,171 @@ dev.off()
 ```{r ddistributions, echo=FALSE, out.width = "80%", fig.cap = "Sampling distribution for $d_{unbiased}$"}
 knitr::include_graphics("ch_samples_precision/images/d_distribs2.png")
 ```
+
+
+\newpage
+
+### Population effect size
+
+The precision with which sample $d$-values estimate the population standardized mean difference is influenced by the magnitude of the population standardized mean difference. This situation differs sharply from that of sample means. The magnitude of the population mean does not influence the shape of the distribution of sample means. The distribution of sample means is normal - regardless of whether the population mean is high or low. 
+
+In contrast, the shape of the the sampling distribution of $d$-values changes depending on the magnitude of the population effect (i.e., $\delta$). In Figure \@ref(fig:dvalueskew) we illustrate two scenarios. Both scenarios are based on a repeated measures design. For each scenario we created a population-level difference and then obtained 50000 sample $d$-values. The sample size, $n$ = 10 for each $d$-value, was held constant across the two scenarios. In contrast, the population standardized mean difference was different across the two scenarios. In Figure \@ref(fig:dvalueskew)A the population standardized mean difference was $\delta$ = 0.10. In contrast, in Figure \@ref(fig:dvalueskew)B the population standardized mean difference was $\delta$ = 2.00. Compare the shape of the distributions of $d$-values in Figure \@ref(fig:dvalueskew)A and Figure \@ref(fig:dvalueskew)B. You can see how the shape changes when the population level effect size changes. Consequently, the size of the population standardized mean difference influences the precision with which sample $d$-values estimate the population level effect ($\delta$).
+
+```{r, include= FALSE, eval = FALSE}
+
+library(learnSampling)
+
+k <- 50000
+n <- 10
+ds <- rep(NA,k)
+ks <- 1:k
+
+get_rep_d <- function(x) {
+  dout <- mean(x)/sd(x)
+  return(dout)
+}  
+
+pop.d <- .10
+for (i in ks) {
+  cur_sample <- rnorm(n)+pop.d
+  d <- get_rep_d(cur_sample)
+  ds[i] <- d
+}
+ds10 <- ds
+
+
+pop.d <- 2
+ds <- rep(NA,k)
+for (i in ks) {
+  cur_sample <- rnorm(n)+pop.d
+  d <- get_rep_d(cur_sample)
+  ds[i] <- d
+}
+ds200 <- ds
+
+dfd <- data.frame(ds10, ds200)
+names(dfd) <- c("d10", "d200")
+
+dp10 <- ggplot(dfd, mapping = aes(x = d10)) +
+  geom_density(adjust = 2) +
+  coord_cartesian(xlim = c(-1.5, 5), ylim = c(0, 1.2)) +
+  scale_x_continuous(breaks = seq(-1.5, 5, by = .5)) +
+  scale_y_continuous(breaks = seq(0, 1.2, by = .1)) +
+  labs(x = "d-value", y = "Density") +
+  theme_classic(18)
+  
+dp200 <- ggplot(dfd, mapping = aes(x = d200)) +
+  geom_density(adjust = 2) +
+  coord_cartesian(xlim = c(-1.5, 5), ylim = c(0, 1.2)) +
+  scale_x_continuous(breaks = seq(-1.5, 5, by = .5)) +
+  scale_y_continuous(breaks = seq(0, 1.2, by = .1)) +
+  labs(x = "d-value", y = "Density") +
+  theme_classic(18)
+
+
+png(filename = "ch_samples_precision/images/dskew.png", width = 12*300, height = 9*300, res = 300)
+gridExtra::grid.arrange(dp10, dp200)
+dev.off()
+```
+
+```{r dvalueskew, echo = FALSE, out.width = "80%", fig.cap = "d-value skew graphs"}
+knitr::include_graphics("ch_samples_precision/images/dskew.png")
+```
+
+
+
+**Standard Error**
+
+There is a standard error for $d$-values (i.e., $SE_d$ or $SE_{d_{unbiased}}$). It is simply the standard deviation of the thousands of $d$-values in the simulation. More generally, it is an index of much $d$-values vary from a population standardized mean difference ($\delta$) due to sampling error for a given sample size.
+
+
+**The precision of sample $d$-values is influenced by:**
+
+* population standardized mean difference ($\delta$)
+
+* sample size ($n$)
+
+
+## Precision for sample correlations ($r$): Causes
+
+
+
+```{r, include= FALSE, eval=FALSE}
+library(tidyverse)
+library(learnSampling)
+set.seed(1)
+r30n50 <- get_r_samples(pop.r = .30,  n = 50, number.of.samples = 50000)
+r30n500 <- get_r_samples(pop.r = .30, n = 500, number.of.samples = 50000)
+r70n50 <- get_r_samples(pop.r = .70,  n = 50, number.of.samples = 50000)
+r70n500 <- get_r_samples(pop.r = .70, n = 500, number.of.samples = 50000)
+
+plr30n50 <- ggplot(r30n50, mapping = aes(x = r)) +
+  geom_density(adjust = 2) +
+  coord_cartesian(xlim = c(-.4, .8), ylim = c(0, 10)) +
+  scale_x_continuous(breaks = seq(-.4, .8, by = .2)) +
+  scale_y_continuous(breaks = seq(0, 20, by = 2)) +
+  labs(x = "sample correlation", y = "Density") +
+  theme_classic(18)
+
+
+plr30n500 <- ggplot(r30n500, mapping = aes(x = r)) +
+  geom_density(adjust = 2) +
+  coord_cartesian(xlim = c(-.4, .8), ylim = c(0, 10)) +
+  scale_x_continuous(breaks = seq(-.4, .8, by = .2)) +
+  scale_y_continuous(breaks = seq(0, 20, by = 2)) +
+  labs(x = "sample correlation", y = "Density") +
+  theme_classic(18)
+
+
+plr30n50v2 <- ggplot(r30n50, mapping = aes(x = r)) +
+  geom_density(adjust = 2) +
+  coord_cartesian(xlim = c(-.4, .8), ylim = c(0, 6)) +
+  scale_x_continuous(breaks = seq(-.4, .8, by = .2)) +
+  scale_y_continuous(breaks = seq(0, 6, by = 2)) +
+  labs(x = "sample correlation", y = "Density") +
+  theme_classic(18)
+
+plr70n50 <- ggplot(r70n50, mapping = aes(x = r)) +
+  geom_density(adjust = 2) +
+  coord_cartesian(xlim = c(-.35, 1), ylim = c(0, 6)) +
+  scale_x_continuous(breaks = seq(-.4, 1, by = .2)) +
+  scale_y_continuous(breaks = seq(0, 6, by = 2)) +
+  labs(x = "sample correlation", y = "Density") +
+  theme_classic(18)
+
+print(plr30n50v2)  
+print(plr70n50)  
+
+
+png(filename = "ch_samples_precision/images/rvaluensize.png", width = 8*300, height = 10*300, res = 300)
+gridExtra::grid.arrange(plr30n50, plr30n500)
+dev.off()
+
+png(filename = "ch_samples_precision/images/rvaluerhosize.png", width = 8*300, height = 10*300, res = 300)
+gridExtra::grid.arrange(plr30n50v2, plr70n50)
+dev.off()
+
+```
+
+```{r dvalueskew, echo = FALSE, out.width = "80%", fig.cap = "d-value skew graphs"}
+knitr::include_graphics("ch_samples_precision/images/dskew.png")
+```
+
+
+
+
+
+### Sample size
+
+
+### Population effect size
+
+**Standard Error**
+
+As with the other statistics reviewed, for sample correlations ($r$) you can calculate a standard error ($SE_r$). It is simply the standard deviation of the thousands of sample correlations ($r$'s) in the simulation. More generally, it is an index of much sample correlations vary from a population correlation ($\rho$) due to sampling error for a given sample size.
+
+**The precision of sample correlations ($r$) is influenced by:**
+
+* population correlation ($\rho$)
+
+* sample size ($n$)
