--- a/06-samples_precision.Rmd
+++ b/06-samples_precision.Rmd
@@ -586,10 +586,13 @@ dev.off()
 
 ```
 
-```{r dvalueskew, echo = FALSE, out.width = "80%", fig.cap = "d-value skew graphs"}
-knitr::include_graphics("ch_samples_precision/images/dskew.png")
+```{r rvaluen, echo = FALSE, out.width = "80%", fig.cap = "Correlation precision and sample size"}
+knitr::include_graphics("ch_samples_precision/images/r_sampling_dist_n_vary.png")
 ```
 
+```{r rvalueskew, echo = FALSE, out.width = "80%", fig.cap = "Correlation precision and effect size"}
+knitr::include_graphics("ch_samples_precision/images/r_sampling_dist_rho_vary.png")
+```
 
 
 
