--- a/index.Rmd
+++ b/index.Rmd
@@ -1,5 +1,5 @@
 --- 
-title: "PSYC6060 Course Notes"
+title: "Welcome!"
 author: "David J. Stanley"
 date: "`r Sys.Date()`"
 documentclass: krantz
@@ -28,16 +28,11 @@ lapply(c('xfun'), function(pkg) {
 })
 ```
 
-# Preface {-}
 
-These notes are a resource for students in my PSYC*6060 class. The notes are a subset of material that I have created for a public domain statistics book to be released sometime in the distant future.
+# Course: {-}
 
-## Software information and conventions {-}
-
-I used the **knitr**\index{knitr} package [@xie2015] and the **bookdown**\index{bookdown} package [@R-bookdown] to compile my book. My R session information is shown below:
-
-```{r}
-xfun::session_info()
+```{r, echo=FALSE, out.width="100%"}
+knitr::include_graphics("header_6060.png")
 ```
 
-Package names are in bold text (e.g., **rmarkdown**), and inline code and filenames are formatted in a typewriter font (e.g., `knitr::knit('foo.Rmd')`). Function names are followed by parentheses (e.g., `bookdown::render_book()`).
+These notes are a resource for students in my PSYC*4780 class. The notes are a subset of material that I am creating for a public domain statistics book to be released sometime in the distant future.
