--- a/01-introduction.Rmd
+++ b/01-introduction.Rmd
@@ -112,6 +112,10 @@ You can see as discussed previously, we are trying to instill an effective workf
 
 In the previous section you created your first script. We begin by adding a comment to the script. A comment is something that will be read by humans rather than the computer/R. You make comments for other people that will read your code and need to understand what you have done. However, realize that you are also making comments for your future self as illustrated in an [XKCD cartoon](https://xkcd.com/1421/). 
 
+```{r, echo = FALSE, out.width="40%"}
+knitr::include_graphics("ch_introduction/images/future_self_2x.png")
+```
+
 A good way to start every script is with a comment that includes the date of your script (or even better when you installed your packages, more on this later). Like smartphone apps, packages are updated regularly. Sometimes after a package is updated it will no longer work with an older script. Fortunately, the [checkpoint package](https://cran.r-project.org/web/packages/checkpoint/index.html)\index{R Studio Cloud} lets users role back the clock and use older versions of packages. Adding a comment with the date of your script will help future users (including you) to use your script with the same version of the package used when you wrote the script. Dating your script is an important part of an effective and reproducible workflow.
 
 
@@ -120,7 +124,7 @@ A good way to start every script is with a comment that includes the date of you
 # By: John Smith
 ```
 
-Moving forward, I suggest you use comments to make your own personal notes in your own code as your write it. Note that in the above comment I used the internationally accepted date format\index{date format} order Year/Month/Day. Some people use the mnemonic *Your My Dream* to remember this order. Wikipedia provides more information about the [Internationally Date Format ISO 8601](https://en.wikipedia.org/wiki/ISO_8601). This [xkcd](https://xkcd.com/1179/) cartoon is the focus of the date format:
+Moving forward, I suggest you use comments to make your own personal notes in your own code as your write it. Note that in the above comment I used the internationally accepted date format\index{date format} order Year/Month/Day created by the [International Organization for Standardization](https://www.iso.org/home.html) (ISO). Some people use the mnemonic *Your My Dream* to remember the **Y**ear **M**onth **D**ay order. Wikipedia provides more information about this [International Date Format (ISO 8601)](https://en.wikipedia.org/wiki/ISO_8601). An [XKCD](https://xkcd.com/1179/) cartoon highlights the ISO date format:
 
 ```{r, echo = FALSE, out.width="40%"}
 knitr::include_graphics("ch_introduction/images/iso8601.png")
