--- a/book.bib
+++ b/book.bib
@@ -276,3 +276,14 @@
   year={2014},
   publisher={Sage}
 }
+
+@article{button2013power,
+  title={Power failure: why small sample size undermines the reliability of neuroscience},
+  author={Button, Katherine S and Ioannidis, John PA and Mokrysz, Claire and Nosek, Brian A and Flint, Jonathan and Robinson, Emma SJ and Munaf{\`o}, Marcus R},
+  journal={Nature reviews neuroscience},
+  volume={14},
+  number={5},
+  pages={365--376},
+  year={2013},
+  publisher={Nature Publishing Group}
+}
