--- a/book.bib
+++ b/book.bib
@@ -287,3 +287,15 @@
   year={2013},
   publisher={Nature Publishing Group}
 }
+
+@article{lakens2018equivalence,
+  title={Equivalence testing for psychological research: A tutorial},
+  author={Lakens, Dani{\"e}l and Scheel, Anne M and Isager, Peder M},
+  journal={Advances in Methods and Practices in Psychological Science},
+  volume={1},
+  number={2},
+  pages={259--269},
+  year={2018},
+  publisher={Sage Publications Sage CA: Los Angeles, CA}
+}
+
